docs: update README with security features and architecture details
- Add comprehensive feature list highlighting security-first approach
- Document HTTPS validation, SSL certificate verification, and SSRF protection
- Include input validation and concurrent processing capabilities
- Add development commands for testing, security scanning, and code quality
- Update requirements with safety dependency for vulnerability scanning
- Reflect architectural improvements and modular design principles

--- a/.github/workflows/proxy-generator.yml
+++ b/.github/workflows/proxy-generator.yml
@@ -52,6 +52,11 @@ jobs:
       if: steps.cached-poetry-dependencies.outputs.cache-hit != 'true'
       run: poetry install
     
+    - name: Run security scan
+      run: |
+        poetry run safety check
+        echo "Security scan completed successfully"
+    
     - name: Run tests
       run: |
         export PYTHONPATH="${PYTHONPATH}:src"
