feat: configure Safety CLI with API key support for security scanning
- Add SAFETY_API_KEY environment variable support in GitHub Actions
- Update README with Safety CLI setup instructions
- Maintain Safety as the primary security vulnerability scanner
- Remove pip-audit to keep dependencies focused on Safety CLI

--- a/.github/workflows/proxy-generator.yml
+++ b/.github/workflows/proxy-generator.yml
@@ -53,6 +53,8 @@ jobs:
       run: poetry install
     
     - name: Run security scan
+      env:
+        SAFETY_API_KEY: ${{ secrets.SAFETY_API_KEY }}
       run: |
         poetry run safety scan
         echo "Security scan completed successfully"
